# vectra-py

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  documentation.md  occupy_port.py  pyproject.toml  test_observability.py  test_simulation.py  test_traces.db
vectra/: __init__.py  config.py  core.py  interfaces.py  memory.py  observability.py  processor.py  reranker.py  telemetry.py  webconfig_server.py
vectra/backends/: anthropic.py  chroma_store.py  huggingface.py  milvus_store.py  ollama.py  postgres_store.py  prisma_store.py  qdrant_store.py
vectra/dashboard/: index.html  script.js  trace-script.js  trace.html
vectra/ui/: index.html  script.js  style.css
vectra_py.egg-info/: PKG-INFO  SOURCES.txt
vectra_rag_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
